--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -23,6 +23,14 @@
     @apply text-2xl font-bold mb-4;
   }
 
+  .post-title {
+    @apply text-3xl font-bold mb-4;
+  }
+
+  .post-body {
+    @apply text-gray-600;
+  }
+
   .btn-primary {
     @apply inline-block px-6 py-2 bg-blue-700 text-white rounded hover:bg-blue-800 transition;
   }
