--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -57,4 +57,8 @@
   .bg-gradient-logo {
     background-image: linear-gradient(45deg, #ff8c00, #ff4500, black 90%);
   }
+
+  .border-gradient {
+    @apply bg-gradient-to-tr from-orange-400 via-pink-500 to-purple-600;
+  }
 }
